--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img src="images/ikutsu2.png" alt="画像" class="thumb">
         </div>
         <p>かずの分け方・つくり方を学ぼう！</p>
-        <a href="manalot-ikutsu/index.html" class="play-button">▶ あそぶ</a>
+        <a href="https://clearfstudio.github.io/manalot-ikutsu/" class="play-button">▶ あそぶ</a>
       </div>
     </section>
   </main>
