--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="images/typing2.png" alt="画像" class="thumb">
         </div>
         <p>キーを打ってスコアを競おう！</p>
-        <a href="typing/index.html" class="play-button">▶ あそぶ</a>
+        <a href="https://clearfstudio.github.io/manalot-typing/" class="play-button">▶ あそぶ</a>
       </div>
       <div class="app-card">
         <h3>いくつといくつ <span class="mobile-mark">📱</span></h3>
