--- a/okuduke.html
+++ b/okuduke.html
@@ -26,7 +26,7 @@
 
       <p>
         Clearf Studioは、教育現場や個人事業の方向けに、<br>業務効率化・DX化をお手伝いするテンプレートを販売しています。<br>
-        詳しくは <a href="https://coconala.com/users/clearfstudio" target="_blank">ココナラのClearf Studioページ</a> をご覧ください。
+        詳しくは <a href="https://coconala.com/users/5439966" target="_blank">ココナラのClearf Studioページ</a> をご覧ください。
       </p>
     </section>
   </main>
