--- a/okuduke.html
+++ b/okuduke.html
@@ -21,8 +21,10 @@
 
       <p>
         まなろっとスタジオの運営は <strong>Clearf Studio</strong> が行っています。<br>
-        まなろっとスタジオの活動をご支援いただける方は、<a href="https://ofuse.me/u/clearfstudio" target="_blank">OFUSE</a>からお願いいたします。
+        まなろっとスタジオの活動をご支援いただける方は、OFUSEからご支援いただけますと幸いです。
       </p>
+
+      <a data-ofuse-widget-button href="https://ofuse.me/o?uid=102059" data-ofuse-id="102059" data-ofuse-size="large" data-ofuse-text="OFUSEで支援する">OFUSEで支援する</a><script async src="https://ofuse.me/assets/platform/widget.js" charset="utf-8"></script>
 
       <p>
         Clearf Studioは、教育現場や個人事業の方向けに、<br>業務効率化・DX化をお手伝いするテンプレートを販売しています。<br>
