--- a/okuduke.html
+++ b/okuduke.html
@@ -21,7 +21,7 @@
 
       <p>
         まなろっとスタジオの運営は <strong>Clearf Studio</strong> が行っています。<br>
-        まなろっとスタジオの活動をご支援いただける方は、OFUSEからご支援いただけますと幸いです。
+        まなろっとスタジオの活動をご支援いただける方は、<br>OFUSEからご支援いただけますと幸いです。
       </p>
 
       <a data-ofuse-widget-button href="https://ofuse.me/o?uid=102059" data-ofuse-id="102059" data-ofuse-size="large" data-ofuse-text="OFUSEで支援する">OFUSEで支援する</a><script async src="https://ofuse.me/assets/platform/widget.js" charset="utf-8"></script>
