--- a/okuduke.html
+++ b/okuduke.html
@@ -20,8 +20,10 @@
       </p>
 
       <p>
-        まなろっとスタジオの運営は <strong>Clearf Studio</strong> が行っています。<br>
-        まなろっとスタジオの活動をご支援いただける方は、<br>OFUSEからご支援いただけますと幸いです。
+        まなろっとスタジオの運営は <strong>Clearf Studio</strong> が行っています。<br><br>
+まなろっとスタジオは、すべての子どもたちが「楽しく」「安心して」学べる場を目指して、<br>日々小さな工夫を積み重ねています。
+そんな活動を、いいなと思ってくださった方がいましたら、<br>ぜひ応援の気持ちを届けていただけたら嬉しいです。
+ご支援は外部サービス『OFUSE』より、100円から可能です。<br>クレジットカード/Apple Pay/Google Pay対応
       </p>
 
       <a data-ofuse-widget-button href="https://ofuse.me/o?uid=102059" data-ofuse-id="102059" data-ofuse-size="large" data-ofuse-text="OFUSEで支援する">OFUSEで支援する</a><script async src="https://ofuse.me/assets/platform/widget.js" charset="utf-8"></script>
