--- a/okuduke.html
+++ b/okuduke.html
@@ -20,7 +20,9 @@
       </p>
 
       <p>
-        まなろっとスタジオの運営は <strong>Clearf Studio</strong> が行っています。<br><br>
+        まなろっとスタジオの運営は <strong>Clearf Studio</strong> が行っています。
+      </p>
+      <p>
 まなろっとスタジオは、すべての子どもたちが「楽しく」「安心して」学べる場を目指して、<br>日々小さな工夫を積み重ねています。<br>
 そんな活動を、いいなと思ってくださった方がいましたら、<br>ぜひ応援の気持ちを届けていただけたら嬉しいです。<br>
 ご支援は外部サービス『OFUSE』より、100円から可能です。<br>クレジットカード/Apple Pay/Google Pay対応
