--- a/okuduke.html
+++ b/okuduke.html
@@ -12,22 +12,28 @@
 
   <main>
     <section class="info-section">
-      <h2>教育関係者・保護者の方へ</h2>
-      <p>
-        まなろっとスタジオは、子どもが安心して遊べる学習用アプリを公開しているサイトです。<br>
-        全てのアプリは無料・広告なしで、どなたでも安心してお使いいただけます。<br>
-        ご家庭や学校で、自由にご活用ください。
-      </p>
+<h2>教育関係者・保護者の方へ</h2>
+<p>
+  まなろっとスタジオは、子どもが安心して遊べる学習用アプリを公開しているサイトです。<br>
+  すべてのアプリは無料・広告なしで、どなたでも安心してお使いいただけます。<br>
+  ご家庭や学校など、幅広い場面で自由にご活用ください。
+</p>
 
-      <p>
-        まなろっとスタジオの運営は <strong>Clearf Studio</strong> が行っています。
-      </p>
-      <p>
-まなろっとスタジオは、すべての子どもたちが「楽しく」「安心して」学べる場を目指して、<br>日々小さな工夫を積み重ねています。<br>
-そんな活動を、いいなと思ってくださった方がいましたら、<br>ぜひ応援の気持ちを届けていただけたら嬉しいです。<br>
-ご支援は外部サービス『OFUSE』より、100円から可能です。<br>クレジットカード/Apple Pay/Google Pay対応
-      </p>
+<p>
+  このサイトは <strong>Clearf Studio</strong> が運営しています。<br>
+  子どもたちが「楽しく」「安心して」学べる場をつくることを目指して、<br>
+  日々小さな工夫を積み重ねています。
+</p>
 
+<p>
+  そんな活動を「いいな」と思ってくださった方がいましたら、<br>
+  応援の気持ちを届けていただけると、とても励みになります。
+</p>
+
+<p>
+  ご支援は外部サービス『OFUSE』より、100円から可能です。<br>
+  クレジットカード / Apple Pay / Google Pay に対応しています。
+</p>
       <a data-ofuse-widget-button href="https://ofuse.me/o?uid=102059" data-ofuse-id="102059" data-ofuse-size="large" data-ofuse-text="OFUSEで支援する">OFUSEで支援する</a><script async src="https://ofuse.me/assets/platform/widget.js" charset="utf-8"></script>
 
       <p>
