--- a/okuduke.html
+++ b/okuduke.html
@@ -37,7 +37,8 @@
       <a data-ofuse-widget-button href="https://ofuse.me/o?uid=102059" data-ofuse-id="102059" data-ofuse-size="large" data-ofuse-text="OFUSEで支援する">OFUSEで支援する</a><script async src="https://ofuse.me/assets/platform/widget.js" charset="utf-8"></script>
 
       <p>
-        Clearf Studioは、教育現場や個人事業の方向けに、<br>業務効率化・DX化をお手伝いするテンプレートを販売しています。<br>
+        ClearfStudio（クリアーフスタジオ）は、教育現場や個人事業の方々に向けて、<br>業務効率化やICT活用を支援するツールを提供しています。
+<br>
         詳しくは <a href="https://coconala.com/users/5439966" target="_blank">ココナラのClearf Studioページ</a> をご覧ください。
       </p>
     </section>
