--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
 <header class="site-header">
+  <a href="index.html">
   <img src="logo2.png" alt="まなろっとスタジオ ロゴ" class="logo">
+  </a>
 </header>
   <div class="genre-buttons">
   <button class="genre-btn" data-genre="typing">タイピング</button>
   <button class="genre-btn" data-genre="math">さんすう</button>
+  <button class="genre-btn" data-genre="smart">iPhone/android</button>
   <button class="genre-btn disabled-btn">さくせいちゅう…</button>
 </div>
 
@@ -48,7 +51,7 @@
     `,
     math: `
       <div class="app-card">
-        <h3>いくつといくつ <span class="mobile-mark">📱</span>スマホOK</h3>
+        <h3>いくつといくつ</h3>
         <div class="app-thumbnails">
             <img src="images/ikutsu1.png" alt="画像" class="thumb">
             <img src="images/ikutsu2.png" alt="画像" class="thumb">
@@ -72,7 +75,28 @@
             <img src="images/kuku2.png" alt="画像" class="thumb">
         </div>
         <p>九九にちょうせん！<br>九九マスターを　めざして　れんしゅうしよう</p>
-        <a href="https://clearfstudio.github.io/manalot-kuku/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
+        <a href="https://clearfstudio.github.io/manalot-kuku/main.html" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
+      </div>
+    `,
+    smart: `
+      <div class="app-card">
+        <h3>いくつといくつ <span class="mobile-mark">📱</span>スマホたいおう</h3>
+        <div class="app-thumbnails">
+            <img src="images/ikutsu1.png" alt="画像" class="thumb">
+            <img src="images/ikutsu2.png" alt="画像" class="thumb">
+        </div>
+        <p>かずをつくる　モードと　かずをわける　モードがあるよ<br>なんかいでも　れんしゅうしよう
+          <br>がめんを　よこにして　あそんでね</p>
+        <a href="https://clearfstudio.github.io/manalot-ikutsu/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
+      </div>
+      <div class="app-card">
+        <h3>めざせ九九マスター！ <span class="mobile-mark">📱</span>スマホよう</h3>
+        <div class="app-thumbnails">
+            <img src="images/kuku1.png" alt="画像" class="thumb">
+            <img src="images/kuku2.png" alt="画像" class="thumb">
+        </div>
+        <p>九九にちょうせん！<br>九九マスターを　めざして　れんしゅうしよう<br>がめんを　よこにして　あそんでね</p>
+        <a href="https://clearfstudio.github.io/manalot-kuku/mobile.html" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
       </div>
     `
   };
