--- a/okuduke.html
+++ b/okuduke.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   <header class="site-header">
-    <img src="logo.png" alt="まなろっとスタジオ ロゴ" class="logo">
+      <a href="index.html">
+      <img src="logo2.png" alt="まなろっとスタジオ ロゴ" class="logo">
+      </a>
   </header>
 
   <main>
