--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <a href="https://clearfstudio.github.io/manalot-sen/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
       </div>
       <div class="app-card">
-        <h3>めざせ九九マスター！ <span class="mobile-mark">📱</span>スマホOK</h3>
+        <h3>めざせ九九マスター！</h3>
         <div class="app-thumbnails">
             <img src="images/kuku1.png" alt="画像" class="thumb">
             <img src="images/kuku2.png" alt="画像" class="thumb">
