--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="genre-buttons">
   <button class="genre-btn" data-genre="typing">タイピング</button>
   <button class="genre-btn" data-genre="math">さんすう</button>
-  <button class="genre-btn" data-genre="smart">iPhone/android</button>
+  <button class="genre-btn" data-genre="smart">iPhone/Android</button>
   <button class="genre-btn disabled-btn">さくせいちゅう…</button>
 </div>
 
