--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
         <a href="https://clearfstudio.github.io/manalot-sen/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
       </div>
       <div class="app-card">
+        <h3>かたちをつくろう　さんかくをならべよう</h3>
+        <div class="app-thumbnails">
+            <img src="images/katachisan1.png" alt="画像" class="thumb">
+            <img src="images/katachisan2.png" alt="画像" class="thumb">
+        </div>
+        <p>さんかくを　かいてんさせて　ならべよう<br>ならべて　いろいろな　かたちを　つくろう</p>
+        <a href="https://clearfstudio.github.io/manalot-sen/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
+      </div>
+      <div class="app-card">
         <h3>めざせ九九マスター！</h3>
         <div class="app-thumbnails">
             <img src="images/kuku1.png" alt="画像" class="thumb">
