--- a/okuduke.html
+++ b/okuduke.html
@@ -2,9 +2,30 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>教育関係者・保護者の方へ | まなろっとスタジオ</title>
   <link rel="stylesheet" href="style.css">
 </head>
+<style>
+  .info-block {
+    background-color: #ffffff;
+    padding: 16px;
+    margin: 12px auto;
+    max-width: 700px;
+    text-align: left;
+    line-height: 1.6;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+  }
+
+  @media screen and (max-width: 600px) {
+    .info-block {
+      padding: 14px;
+      margin: 10px;
+    }
+  }
+</style>
+
 <body>
   <header class="site-header">
       <a href="index.html">
@@ -12,38 +33,57 @@
       </a>
   </header>
 
-  <main>
-    <section class="info-section">
-<h2>教育関係者・保護者の方へ</h2>
-<p>
-  まなろっとスタジオは、子どもが安心して遊べる学習用アプリを公開しているサイトです。<br>
-  すべてのアプリは無料・広告なしで、どなたでも安心してお使いいただけます。<br>
-  ご家庭や学校など、幅広い場面で自由にご活用ください。
-</p>
-
-<p>
-  このサイトは <strong>Clearf Studio</strong> が運営しています。<br>
-  子どもたちが「楽しく」「安心して」学べる場をつくることを目指して、<br>
-  日々小さな工夫を積み重ねています。
-</p>
-
-<p>
-  そんな活動を「いいな」と思ってくださった方がいましたら、<br>
-  応援の気持ちを届けていただけると、とても励みになります。
-</p>
-
-<p>
-  ご支援は外部サービス『OFUSE』より、100円から可能です。<br>
-  クレジットカード / Apple Pay / Google Pay に対応しています。
-</p>
-      <a data-ofuse-widget-button href="https://ofuse.me/o?uid=102059" data-ofuse-id="102059" data-ofuse-size="large" data-ofuse-text="OFUSEで支援する">OFUSEで支援する</a><script async src="https://ofuse.me/assets/platform/widget.js" charset="utf-8"></script>
-
+ <main>
+    <section class="info-block">
+      <h2>教育関係者・保護者の方へ</h2>
+      <p>まなろっとスタジオとは…</p>
       <p>
+        ご家庭や学校で、子どもたちが安心して使える<br>
+        学習アプリを作っています。<br>
+        全てのアプリは広告なし・無料で使用できます。
+      </p>
+    </section>
+
+    <section class="info-block">
+      <p>
+        それぞれのアプリには「もどる」ボタンがなく、<br>
+        子どもが誤操作で他のページへ移りにくくしています。<br>
+        また、教育現場では、トップページではなく<br>
+        アプリ自体のリンクを子どもたちに共有することで、<br>
+        余計なページを見せず学習に集中していただくことができます。
+      </p>
+    </section>
+
+    <section class="info-block">
+      <p>
+        まなろっとスタジオは、<br>
+        教育現場でのICT支援から生まれたサイトです。<br>
+        子どもたちが安心して使用できる設計を目指しています。
+      </p>
+    </section>
+
+    <section class="info-block">
+      <p>
+        このサイトは <strong>Clearf Studio</strong> が運営しています。<br>
+        サイトの運営をご支援いただける方は、以下よりご支援ください。
+      </p>
+      
+      <p>
+        外部サービス『OFUSE』より、100円から可能です。<br>
+        クレジットカード / Apple Pay / Google Pay に対応しています。
+      </p>
+      <div class="centered-block support-button">
+        <a data-ofuse-widget-button href="https://ofuse.me/o?uid=102059" data-ofuse-id="102059" data-ofuse-size="large" data-ofuse-text="OFUSEで支援する">OFUSEで支援する</a><script async src="https://ofuse.me/assets/platform/widget.js" charset="utf-8"></script>
+        <script async src="https://ofuse.me/assets/platform/widget.js" charset="utf-8"></script>
+      </div>
+    </section>
+<section class="info-block">
+          <p>
         ClearfStudio（クリアーフスタジオ）は、教育現場や個人事業の方々に向けて、<br>業務効率化やICT活用を支援するツールを提供しています。
 <br>
         詳しくは <a href="https://coconala.com/users/5439966" target="_blank">ココナラのClearf Studioページ</a> をご覧ください。
       </p>
-    </section>
+      </section>
   </main>
 
   <footer>
