--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <img src="images/katachisan2.png" alt="画像" class="thumb">
         </div>
         <p>さんかくを　かいてんさせて　ならべよう<br>ならべて　いろいろな　かたちを　つくろう</p>
-        <a href="https://clearfstudio.github.io/manalot-sen/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
+        <a href="https://clearfstudio.github.io/manalot-sankaku/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
       </div>
       <div class="app-card">
         <h3>めざせ九九マスター！</h3>
