--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </header>
   <div class="genre-buttons">
   <button class="genre-btn" data-genre="typing">タイピング</button>
+  <button class="genre-btn" data-genre="japanese">こくご</button>
   <button class="genre-btn" data-genre="math">さんすう</button>
   <button class="genre-btn" data-genre="smart">iPhone/Android</button>
-  <button class="genre-btn disabled-btn">さくせいちゅう…</button>
 </div>
 
 
@@ -47,6 +47,17 @@
         </div>
         <p>しょうがくせいのための　タイピングれんしゅうアプリ<br>タイピングマスターを　めざそう</p>
         <a href="https://clearfstudio.github.io/manalot-typing/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
+      </div>
+    `,
+    japanese: `
+      <div class="app-card">
+        <h3>和同開珎　漢字パズル</h3>
+        <div class="app-thumbnails">
+            <img src="images/kanji1.png" alt="画像" class="thumb">
+            <img src="images/kanji2.png" alt="画像" class="thumb">
+        </div>
+        <p>矢印の方向に読めるように　４つの熟語を完成させよう！</p>
+        <a href="https://clearfstudio.github.io/manalot-kanjipuzzle/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
       </div>
     `,
     math: `
@@ -84,7 +95,7 @@
             <img src="images/katachisan2.png" alt="画像" class="thumb">
         </div>
         <p>さんかくを　かいてんさせて　ならべよう<br>ならべて　いろいろな　かたちを　つくろう</p>
-        <a href="https://clearfstudio.github.io/manalot-sankaku/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
+        <a href="https://clearfstudio.github.io/manalot-sen/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
       </div>
       <div class="app-card">
         <h3>めざせ九九マスター！</h3>
