--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <button class="genre-btn" data-genre="typing">タイピング</button>
   <button class="genre-btn" data-genre="japanese">こくご</button>
   <button class="genre-btn" data-genre="math">さんすう</button>
+  <button class="genre-btn" data-genre="social">しゃかい</button>
   <button class="genre-btn" data-genre="smart">iPhone/Android</button>
 </div>
 
@@ -105,6 +106,17 @@
         </div>
         <p>九九にちょうせん！<br>九九マスターを　めざして　れんしゅうしよう</p>
         <a href="https://clearfstudio.github.io/manalot-kuku/main.html" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
+      </div>
+    `,
+    social: `
+      <div class="app-card">
+        <h3>都道府県クイズ</h3>
+        <div class="app-thumbnails">
+            <img src="images/map1.png" alt="画像" class="thumb">
+            <img src="images/map2.png" alt="画像" class="thumb">
+        </div>
+        <p>とどうふけんを　あてる　クイズにちょうせん！<br>１ねんせいから　あそべるよ</p>
+        <a href="https://clearfstudio.github.io/manalot-map/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
       </div>
     `,
     smart: `
