--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <button class="genre-btn" data-genre="japanese">こくご</button>
   <button class="genre-btn" data-genre="math">さんすう</button>
   <button class="genre-btn" data-genre="social">しゃかい</button>
+  <button class="genre-btn" data-genre="other">そのほか</button>
   <button class="genre-btn" data-genre="smart">iPhone/Android</button>
 </div>
 
@@ -119,7 +120,27 @@
         <a href="https://clearfstudio.github.io/manalot-map/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
       </div>
     `,
+    other: `
+      <div class="app-card">
+        <h3>自習タイマー</h3>
+        <div class="app-thumbnails">
+            <img src="images/time1.png" alt="画像" class="thumb">
+            <img src="images/time2.png" alt="画像" class="thumb">
+        </div>
+        <p>べんきょうじかんを　タイマーではかりたいときに　つかってね</p>
+        <a href="https://clearfstudio.github.io/timer/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
+      </div>
+    `,
     smart: `
+      <div class="app-card">
+        <h3>和同開珎　漢字パズル <span class="mobile-mark">📱</span>スマホたいおう</h3>
+        <div class="app-thumbnails">
+            <img src="images/kanji1.png" alt="画像" class="thumb">
+            <img src="images/kanji2.png" alt="画像" class="thumb">
+        </div>
+        <p>矢印の方向に読めるように　４つの熟語を完成させよう！</p>
+        <a href="https://clearfstudio.github.io/manalot-kanjipuzzle/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
+      </div>
       <div class="app-card">
         <h3>いくつといくつ <span class="mobile-mark">📱</span>スマホたいおう</h3>
         <div class="app-thumbnails">
@@ -148,6 +169,15 @@
         </div>
         <p>九九にちょうせん！<br>九九マスターを　めざして　れんしゅうしよう<br>がめんを　よこにして　あそんでね</p>
         <a href="https://clearfstudio.github.io/manalot-kuku/mobile.html" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
+      </div>
+            <div class="app-card">
+        <h3>自習タイマー　<span class="mobile-mark">📱</span>スマホたいおう</h3>
+        <div class="app-thumbnails">
+            <img src="images/time1.png" alt="画像" class="thumb">
+            <img src="images/time2.png" alt="画像" class="thumb">
+        </div>
+        <p>べんきょうじかんを　タイマーではかりたいときに　つかってね</p>
+        <a href="https://clearfstudio.github.io/timer/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
       </div>
     `
   };
