--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
   <img src="logo2.png" alt="まなろっとスタジオ ロゴ" class="logo">
   </a>
 </header>
-  <div class="genre-buttons">
-  <button class="genre-btn" data-genre="typing">タイピング</button>
-  <button class="genre-btn" data-genre="japanese">こくご</button>
-  <button class="genre-btn" data-genre="math">さんすう</button>
-  <button class="genre-btn" data-genre="social">しゃかい</button>
-  <button class="genre-btn" data-genre="other">そのほか</button>
-  <button class="genre-btn" data-genre="smart">iPhone/Android</button>
-</div>
+<nav class="genre-rail">
+  <div class="genre-list">
+    <button class="genre-btn" data-genre="typing">タイピング</button>
+    <button class="genre-btn" data-genre="japanese">こくご</button>
+    <button class="genre-btn" data-genre="math">さんすう</button>
+    <button class="genre-btn" data-genre="social">しゃかい</button>
+    <button class="genre-btn" data-genre="other">そのほか</button>
+    <button class="genre-btn" data-genre="smart">iPhone/Android</button>
+  </div>
+</nav>
 
 
   <main>
@@ -97,7 +99,7 @@
             <img src="images/katachisan2.png" alt="画像" class="thumb">
         </div>
         <p>さんかくを　かいてんさせて　ならべよう<br>ならべて　いろいろな　かたちを　つくろう</p>
-        <a href="https://clearfstudio.github.io/manalot-sen/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
+        <a href="https://clearfstudio.github.io/manalot-sankaku/" class="play-button" target="_blank" rel="noopener">▶ あそぶ</a>
       </div>
       <div class="app-card">
         <h3>めざせ九九マスター！</h3>
