--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
        - ジャンルはグリッドボタン
     =============================== */
     @media (max-width: 768px){
+      :root{
+        --header-h:100px;
+      }
+
       body{ padding-top:calc(var(--header-h) + 70px); }
       .logo{ max-width:90%; height:auto; margin:10px auto; }
 
